# collatz-observatory

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  auto_processing.py  batch.py  cli.py  collatz.py  db.py  main.py  models.py  repository.py  schemas.py  seed.py
app/static/: styles.css
app/templates/: detail.html  index.html
tests/: conftest.py  test_api.py  test_batch.py  test_collatz.py
