[project]
name = "collatz-observatory"
version = "0.1.0"
description = "Minimal FastAPI app for Collatz metrics and sequence lookup"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "jinja2>=3.1,<4.0",
    "uvicorn>=0.30,<1.0",
]

[project.scripts]
collatz-process = "app.cli:main"

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
